--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,26 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+    <ion-title>ADP SlideIt</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
+  <h2>Welcome</h2>
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    Enter credentials, submit.
+    If the slide didn't work, do it manually through ADP.
   </p>
+  <ion-item>
+    <ion-label color="primary" stacked>Username</ion-label>
+    <ion-input id="username" name="username" type="username" placeholder="username" [(ngModel)]="username" (keyup)="store($event)" required></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label color="primary" stacked>Password</ion-label>
+    <ion-input name="password" type="password" placeholder="Password" [(ngModel)]="password" (keyup)="store($event)" required></ion-input>
+  </ion-item>
+  <br>
+  <button (click)="onSubmit()" [disabled]="disableSubmitButton" ion-button round>Slide it</button>
+  <p *ngIf="loading" >loading...</p>
+  <p *ngIf="message.length" class="{{messageColor}}">{{message}}</p>
+
 </ion-content>
