--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>ADP SlideIt</ion-title>
+    <ion-title>SlideIt</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -8,19 +8,29 @@
   <h2>Welcome</h2>
   <p>
     Enter credentials, submit.
-    If the slide didn't work, do it manually through ADP.
+    If the slide didn't work, do it manually.
   </p>
   <ion-item>
     <ion-label color="primary" stacked>Username</ion-label>
-    <ion-input id="username" name="username" type="username" placeholder="username" [(ngModel)]="username" (keyup)="store($event)" required></ion-input>
+    <ion-input id="username" type="username" placeholder="Username" [(ngModel)]="username" (keyup)="store($event);onType($event)" required></ion-input>
   </ion-item>
   <ion-item>
     <ion-label color="primary" stacked>Password</ion-label>
-    <ion-input name="password" type="password" placeholder="Password" [(ngModel)]="password" (keyup)="store($event)" required></ion-input>
+    <ion-input id="password" type="password" placeholder="Password" [(ngModel)]="password" (keyup)="store($event);onType($event)" required></ion-input>
   </ion-item>
   <br>
-  <button (click)="onSubmit()" [disabled]="disableSubmitButton" ion-button round>Slide it</button>
-  <p *ngIf="loading" >loading...</p>
-  <p *ngIf="message.length" class="{{messageColor}}">{{message}}</p>
+  <ion-list>
+    <ion-list-header>
+      Timer
+      <ion-badge item-end>{{timer}} minutes</ion-badge>
+    </ion-list-header>
+    <ion-item>
+      <ion-range [(ngModel)]="timer" max="60">
+        <ion-icon range-left small name="ios-clock-outline"></ion-icon>
+        <ion-icon range-right name="ios-clock-outline"></ion-icon>
+      </ion-range>
+    </ion-item>
+  </ion-list>
+  <button (click)="checkCredentials()" [disabled]="disableSubmitButton" ion-button round>Slide</button>
 
 </ion-content>
